Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-06-26 (SVN):
    * hexenworld/server/model.c (Mod_LoadFaces): Remove the strncmp call
      for just one "*" character and test for the '*' character instead.

2011-06-25 (SVN):
    * dos_v2.c, in_dos.c, snd_gus.c, snd_sb.c, sys_dos.c: Minor clean up
      for unused globals, missing dos.h includes, etc.

2011-06-25 (SVN):
    * common.h: For dos, define q_str[n]casecmp as str[n]cmpi to avoid
      the actual redirection to them in djgpp libc.

2011-06-25 (SVN):
    * net_udp.c (udp_scan_iface):  Cast the char array to caddr_t when
      assigning it to the ifc_buf member of struct ifconf.

2011-06-25 (SVN):
    * Minor tidy up in DOS networking sources.

2011-06-25 (SVN):
    * net_udp.c, net_wins.c (UDP_CheckNewConnections): Remove redundant
      comment.

2011-06-24 (SVN):
    * Updated the documentation after the default audio driver changes.
    * snd_sys.c (S_DriversInit): Register the untested sunaudio driver
      the first in order to make it the last choice.  If sdl audio is
      compiled for any supported platform, then register sdl audio the
      last to make it the default choice.

2011-06-24 (SVN):
    * Makefiles: Always keep the debug symbols in and use strip if they
      are not required. Always add the default CPUFLAGS to CFLAGS along
      with the ARGCHFLAGS. Make debug- builds possible for the h2patch
      application. Remove the -fno-builtin option from the xdelta3 build
      flags. Change -O3 to -O2 in the xdelta3 optimized build flags.

2011-06-23 (SVN):
    * gamecode, soul.hc: Made the soul sphere in sync with the skull or
      the cross. Changed the model lighting style to fullbright so now
      the skull and the cross are well discernible in dark places. The
      soul sphere can now gain momentum during spawning and fly around
      instead of hovering over the dead body and sometimes got stuck.